Fix image alignment

--- a/gtk-3.22/gtk-widgets.css
+++ b/gtk-3.22/gtk-widgets.css
@@ -1825,7 +1825,7 @@ menu,
 window.menu,
 window.popup {
     padding: 4px 0;
-    border-radius: 4px;
+    border-radius: 3px;
     background-color: @bg_color;
     box-shadow:
         inset 0 0 0 1px alpha (@bg_highlight_color, 0.1),
@@ -1918,15 +1918,19 @@ menuitem arrow.bottom {
 }
 
 menuitem label,
-menuitem image,
 modelbutton label,
-.menuitem label,
-.menuitem image {
+.menuitem label {
     padding: 3px;
 }
 
 menu:dir(ltr) menuitem image:first-child {
-    margin-left: -16px;
+    margin-left: -17px;
+    padding-right: 2px;
+}
+
+menu:dir(rtl) menuitem image:first-child {
+    margin-right: -17px;
+    padding-left: 2px;
 }
 
 modelbutton {
